# imagesorcery-mcp

./: .gitignore  CONFIG.md  GEMINI.md  LLM-INSTALL.md  README.md  config.default  glama.dockerfile  glama.json  pyproject.toml  pytest.ini  setup.sh
src/imagesorcery_mcp/: README.md  __init__.py  __main__.py  config.py  logging_config.py  server.py  telemetry_amplitude.py  telemetry_keys.py  telemetry_posthog.py
src/imagesorcery_mcp/middlewares/: telemetry.py  validation.py
src/imagesorcery_mcp/prompts/: README.md  __init__.py  remove_background.py
src/imagesorcery_mcp/resources/: README.md  __init__.py  models.py
src/imagesorcery_mcp/scripts/: README.md  clear_telemetry_keys.py  create_model_descriptions.py  download_clip.py  download_models.py  populate_telemetry_keys.py  post_install.py
src/imagesorcery_mcp/tools/: README.md  __init__.py  blur.py  change_color.py  config.py  detect.py  draw_arrows.py  draw_circle.py  draw_lines.py  draw_rectangle.py  draw_text.py  fill.py  find.py  metainfo.py  models.py  ocr.py  overlay.py  resize.py
src/imagewizard-mcp/tools/: README.md
src/imagewizard_mcp/: __init__.py  __main__.py  logging_config.py  server.py
src/imagewizard_mcp/scripts/: README.md  __init__.py  create_model_descriptions.py  download_clip.py  download_models.py
src/imagewizard_mcp/tools/: README.md  __init__.py  always_true.py  classify.py  crop.py  detect.py  draw_rectangle.py  draw_text.py  echo.py  find.py  metainfo.py  models.py  ocr.py  resize.py  rotate.py
src/mcp_server_basic/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_config.py  test_logging.py  test_server.py  test_telemetry.py
tests/prompts/: test_remove_background.py
tests/resources/: test_models.py
tests/tools/: test_always_true.py  test_blur.py  test_change_color.py  test_classify.py  test_config_tool.py  test_crop.py  test_detect.py  test_draw_arrows.py  test_draw_circle.py  test_draw_lines.py  test_draw_rectangle.py  test_draw_text.py  test_echo.py  test_fill.py  test_find.py  test_metainfo.py  test_models.py  test_ocr.py  test_overlay.py  test_resize.py  test_rotate.py
