[project]
name = "imagewizard-mcp"
version = "0.1.0"
description = "A Model Context Protocol server providing image manipulation tools for LLMs"
requires-python = ">=3.10"
authors = [
    { name = "titulus", email = "titulus.web@gmail.com" },
]
keywords = ["mcp", "llm"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "fastmcp", # core for MCP servers
    "pydantic>=2.0.0", # For data validation, settings management, and serialization of classes
    "opencv-python>=4.5.0", # For image processing and computer vision tasks
    "imutils>=0.5.4", # For image processing typical tasks which are not included in OpenCV
    "Pillow", # For retrieving image metadata
]

[project.scripts]
imagewizard-mcp = "imagewizard_mcp:main"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
